syntax = "proto3";

package cache;

service Cache {
  rpc Add(AddRequest) returns (AddReply) {}
  rpc Get(GetRequest) returns (GetReply) {}
  rpc Remove(RemoveRequest) returns (RemoveReply) {}
  rpc Len(LenRequest) returns (LenReply) {}
  rpc Clear(ClearRequest) returns (ClearReply) {}
}

message AddRequest {
  string key = 1;
  bytes value = 2;
}

message AddReply {
  string key = 1;
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string key = 1;
  bytes value = 2;
  bool ok = 3;
}

message RemoveRequest {
  string key = 1;
}

message RemoveReply {
  string key = 1;
}

message LenRequest {
}

message LenReply {
  int32 len = 1;
}

message ClearRequest {
}

message ClearReply {
}

